--- a/src/styles/_section__home.scss
+++ b/src/styles/_section__home.scss
@@ -11,6 +11,7 @@
       font-weight: bold;
       font-size: 62px;
       padding: 0 0 25px 198px;
+      margin: 20px 0;
       height: 43px;
     }
     h2 {
