--- a/src/styles/_section__slider.scss
+++ b/src/styles/_section__slider.scss
@@ -158,6 +158,7 @@
   right: 50px;
 }
 .reviews {
+  margin-bottom: 140px;
   .carousel-inner {
     box-shadow: 1px 1px 3px 3px rgb(175, 167, 167);
     border-radius: 10px;
