--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -46,5 +46,12 @@
     height: 35px;
     margin-left: 15px;
   }
+
+  .me-auto{
+    margin: 0 !important;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: bold;
+  }
   
   
