--- a/src/styles/_map__address.scss
+++ b/src/styles/_map__address.scss
@@ -1,3 +1,24 @@
-.map-text{
-    font-size: 36px;
+.card {
+  height: 580px;
+  flex-direction: row-reverse;
+  iframe {
+    width: 812px;
+    height: 580px;
+  }
+  .map-text {
+    background-image: url("../assets/img/Rectangle50.svg");
+    .card-body {
+      width: 550px;
+      padding: 70px 0 35px 170px;
+      .card-title{
+        font-size: 36px;
+      }
+    }
+    .title{
+      padding: 10px 0 20px 170px;
+    }
+    .title-body{
+      padding: 0 0 35px 170px;
+    }
+  }
 }
