--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -76,9 +76,13 @@
         .ul-li {
           width: 280px;
           padding-left: 10px;
+
           ul {
             margin: 20px 0px;
             padding: 5px;
+            li{
+                font-size: 12px;
+            }
           }
         }
       }
