--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,6 +13,156 @@
 //   body {
 //   }
 // }
+@media (max-width: 900px) {
+    body {
+      width: 768px;
+    }
+    .navbar-brand {
+      width: 80px;
+      .logo {
+        margin-left: 10px;
+      }
+    }
+    .navbar-expand .navbar-nav {
+    //   flex-direction: column;
+    }
+  
+    .main {
+      background-image: url("../assets/img/koteika.jpg");
+      height: 868px;
+      h3,
+      h1,
+      h2 {
+        padding-left: 200px;
+      }
+      .main-button {
+        margin: 180px 0 0 470px;
+        border: 5px;
+      }
+    }
+  
+    .conditions {
+      width: 768px;
+      .raw{
+          right: 0;
+      }
+      ul {
+        padding-left: 16px;
+        li {
+          height: 340px;
+          padding-left: 25px;
+        }
+      }
+    }
+    .carousel-inner {
+      width: 768px;
+      height: 750px;
+  
+      .foto {
+        width: 320px;
+      }
+      .foto1 {
+        width: 550px;
+        height: 440px;
+        left: 50px;
+      }
+      .carousel-caption {
+        h3 {
+          top: -200px;
+        }
+        .ul {
+          top: 40px;
+          left: 320px;
+          width: 300px;
+          .ul-li {
+            width: 350px;
+            padding-left: 20px;
+  
+            ul {
+              margin: 20px 0px;
+              padding: 5px;
+              li{
+                  font-size: 16px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .carousel-control-prev-icon {
+      top: 350px;
+      right: -50px;
+    }
+    .carousel-control-next-icon {
+      top: 350px;
+      right: 50px;
+    }
+    .carousel-indicators {
+      margin: 0px 0 100px 280px;
+    }
+  
+    .reviews {
+      .carousel-inner {
+        width: 618px;
+        height: 1400px;
+        margin-left: 150px;
+        .fotoR {
+          left: 10px;
+        }
+        .carousel-caption {
+          left: 180px;
+        }
+        .carousel-h3 {
+          width: 300px;
+          top: -200px;
+          left: -170px;
+        }
+        .blok {
+          flex-direction: column;
+          left: 20px;
+          .ul-R {
+            width: 300px;
+            height: 350px;
+            .ul-li {
+              width: 290px;
+            }
+          }
+        }
+      }
+      .carousel-indicators {
+        top: 1325px;
+        left: 50px;
+      }
+      .carousel-control-prev-icon{
+        left: 170px;
+      }
+
+      .carousel-control-prev-icon,
+      .carousel-control-next-icon {
+        top: 680px;
+        // left: 50px;
+      }
+    }
+    .card {
+      width: 768px;
+      height: 1180px;
+      // top: 500px;
+      flex-direction: column-reverse;
+      iframe {
+        width: 768px;
+        height: 768px;
+      }
+      .map-text .card-body {
+        margin-top: -50px;
+        width: 768px;
+        padding: 70px 0 50px 240px;
+      }
+      .map-text .title {
+        padding: 10px 0 0px 240px;
+      }
+      
+    }
+  }
 @media (max-width: 400px) {
   body {
     width: 320px;
@@ -29,6 +179,7 @@
 
   .main {
     background-image: url("../assets/img/koteika320.jpg");
+    height:457px ;
     h3,
     h1,
     h2 {
