--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,7 @@
 @import "section__slider.scss";
 @import "footer.scss";
 @import "map__address.scss";
+@import "cards.scss";
 
 
 @media (max-width: 900px) {
