--- a/src/styles/pages/_Numbers.scss
+++ b/src/styles/pages/_Numbers.scss
@@ -1,11 +1,12 @@
 .cart-numbers {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  // flex-direction: row;
+  // flex-wrap: wrap;
+  // flex-grow: 1;
   margin: 50px;
   .numbers-title {
     display: flex;
-    width: 100%;
+    width: 250px;
     justify-content: space-around;
 
     h1 {
@@ -13,6 +14,18 @@
       font-family: Rubik;
       font-weight: bold;
     }
+    .filter {
+      width: 250px;
+      height: 624px;
+      border: 3px solid rgb(194, 44, 57);
+    }
+  }
+
+  .sort {
+    display: flex;
+    // flex-direction: column;
+    justify-content: end;
+    // margin-left: 100px;
     .sort__label {
       width: 196px;
       height: 40px;
@@ -26,6 +39,10 @@
       b {
         margin-top: 20px;
       }
+    }
+    .sort__popup{
+      list-style: none;
+
     }
   }
 }
