--- a/src/styles/pages/_Numbers.scss
+++ b/src/styles/pages/_Numbers.scss
@@ -17,7 +17,7 @@
     .filter {
       width: 250px;
       height: 624px;
-      border: 3px solid rgb(194, 44, 57);
+      // border: 3px solid rgb(194, 44, 57);
     }
   }
 
@@ -41,7 +41,7 @@
       }
     }
     .sort__popup{
-      list-style: none;
+      // list-style: none;
 
     }
   }
