--- a/src/styles/pages/_Numbers.scss
+++ b/src/styles/pages/_Numbers.scss
@@ -23,25 +23,41 @@
 
   .sort {
     display: flex;
-    // flex-direction: column;
-    justify-content: end;
-    // margin-left: 100px;
+    flex-direction: column;
+    align-items: flex-end;
+    
     .sort__label {
+      
       width: 196px;
       height: 40px;
       border-radius: 25px;
       border: 3px;
       border-color: black;
       box-shadow: 0px 5px 10px black;
+     padding-top: 7px;
       svg {
-        margin: 10px 10px 0 14px;
+        margin: 0px 15px 0 14px;
+
       }
       b {
-        margin-top: 20px;
+        margin-right: 20px;
+       
       }
+      span{
+
+        cursor: pointer;
+      }
+      
     }
     .sort__popup{
-      // list-style: none;
+      margin-right: 30px;
+      width: 125px;
+      height: 150px;
+      background-color: bisque;
+      border-radius: 10px;
+      ul{
+      list-style: none;}
+      cursor:pointer;
 
     }
   }
