--- a/src/styles/pages/_Numbers.scss
+++ b/src/styles/pages/_Numbers.scss
@@ -25,6 +25,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    height: 160px;
+
     
     .sort__label {
       
