--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,6 +10,9 @@
 @import "map__address.scss";
 @import "./components/CardsNumbers";
 @import "./pages/Numbers";
+@import "./filtr_price_area_equipment";
+
+
 
 
 
