--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Nunito:wght@300;400;500;600;700;800;900&family=Rubik:wght@400;600;700;900&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Nunito:wght@300;400;500;600;700;800;900&family=Rubik:wght@400;600;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lato:wght@400;700&family=Nunito:wght@300;400;500;600;700;800;900&family=Rubik:wght@400;600;700;900&display=swap");
 @import "~bootstrap/scss/bootstrap";
 
@@ -6,11 +6,15 @@
 @import "section__home.scss";
 @import "section__conditions.scss";
 @import "section__slider.scss";
+@import "section__promotion.scss";
 @import "footer.scss";
 @import "map__address.scss";
 @import "./components/CardsNumbers";
+@import "./pages/FullNumbers";
 @import "./pages/Numbers";
 @import "./filtr_price_area_equipment";
+@import "./pages/Grid";
+
 
 
 
