--- a/src/styles/pages/_FullNumbers.scss
+++ b/src/styles/pages/_FullNumbers.scss
@@ -1,6 +1,6 @@
 .full-numbers{
     margin: 70px auto;
-    // width: 600px;
+    width: 970px;
     height: 396px;
 
 .img-text{
@@ -11,8 +11,28 @@
     }
     .img-text-text{
         margin-left: 70px;
-        width: 300px;
+        // width: 300px;
         
     }
+    .main-button-num {
+        width: 206px;
+        height: 50px;
+        border-radius: 25px;
+        margin: 40px 0 0 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border: none;
+        .p-promotion {
+          font-family: Lato;
+          font-weight: 700;
+          font-size: 22px;
+          margin: 1px 0 0 10px;
+        }
+        img {
+          width: 36px;
+          height: 36px;
+        }
+      }
 }
 }
