--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 @import "header.scss";
+@import "colors.scss";
 @import "section__home.scss";
 @import "section__conditions.scss";
 @import "section__slider.scss";
@@ -14,6 +15,10 @@
 @import "./pages/Numbers";
 @import "./filtr_price_area_equipment";
 @import "./pages/Grid";
+@import "./pages/Booking";
+@import "./pages/Popap";
+
+
 
 
 
