--- a/src/styles/_section__promotion.scss
+++ b/src/styles/_section__promotion.scss
@@ -27,6 +27,7 @@
         width: 206px;
         height: 50px;
         border-radius: 25px;
+        box-shadow: 0px 5px 3px var(--yellow-color-b);
         margin: 40px 0 0 198px;
         display: flex;
         align-items: center;
