--- a/src/styles/_section__slider.scss
+++ b/src/styles/_section__slider.scss
@@ -1,5 +1,3 @@
-
-
 .foto {
   width: 484px;
   height: 151px;
@@ -25,7 +23,7 @@
   text-align: center;
   font-family: Rubik;
   font-size: 36px;
-  font-weight: bold; 
+  font-weight: bold;
   top: -180px;
 }
 .carousel-indicators {
@@ -95,9 +93,10 @@
         width: 206px;
         height: 50px;
         border-radius: 25px;
-        border-color: orange;
-        background-color: orange;
-        color: white;
+        border: none;
+        background-color: var(--yellow-color);
+        color: var(--white-color);
+        box-shadow: 0px 5px 3px var(--yellow-color-b);
         font-family: Lato;
         font-weight: 400;
         font-size: 18px;
@@ -163,4 +162,3 @@
     margin: 10px;
   }
 }
-
