--- a/src/styles/pages/_FullNumbers.scss
+++ b/src/styles/pages/_FullNumbers.scss
@@ -1,28 +1,48 @@
 .full-numbers{
     margin: 70px auto;
-    width: 970px;
+    // width: 970px;
     height: 396px;
+    .paw-n{
+        position: relative;
+        float: right;
+
+    }
 
 .img-text{
     display: flex;
+    justify-content: space-evenly;
     img{
         width: 500px;
         height: 396px;
     }
     .img-text-text{
         margin-left: 70px;
-        // width: 300px;
+        h1{
+            font-size: 36px;
+            font-weight: bold;
+            font-family: Rubik;
+            text-align: center;
+        }
+        ul{
+            font-size: 20px;
+            font-family: Lato;
+            list-style: none;
+        }
         
     }
     .main-button-num {
+        
         width: 206px;
         height: 50px;
         border-radius: 25px;
-        margin: 40px 0 0 10px;
+        margin: 40px 0 0 50px;
         display: flex;
         align-items: center;
         justify-content: space-around;
         border: none;
+        background-color: var(--yellow-color);
+        color: var(--white-color);
+        box-shadow: 0px 5px 3px var(--yellow-color-b);
         .p-promotion {
           font-family: Lato;
           font-weight: 700;
