--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,6 @@
   --white-color: #fff;
   --grey-color: #0002;
   --creame-color: #f0eff5;
-  --yellow-color: orange;
+  --yellow-color: #FF7236;
   --yellow-color-b: rgb(156, 104, 8);
 }
