--- a/src/styles/pages/_Popap.scss
+++ b/src/styles/pages/_Popap.scss
@@ -7,25 +7,31 @@
   margin: 70px auto;
   .paw-p {
     position: relative;
-    float:left;
-    bottom:  100px;
+    float: left;
+    bottom: 100px;
   }
   .vector-14 {
+    width: 16px;
+    height: 16px;
+    flex-shrink: 0;
+    stroke-width: 2px;
+    stroke: var(--unnamed, #1a212f);
     position: relative;
     float: right;
-    padding-right: 40px;
-    padding-top: 40px;
+    right: 40px;
+    top: 40px;
+    // padding: 40px;
+    // padding-top: 40px;
     cursor: pointer;
   }
-  h1{
+  h1 {
     font-family: Rubik;
     font-size: 28px;
     font-weight: bold;
     padding-top: 70px;
     text-align: center;
-
   }
-  p{
+  p {
     font-family: Lato;
     font-size: 16px;
     margin: 25px auto;
@@ -49,9 +55,8 @@
       font-size: 18px;
       margin: 1px 0 0 10px;
     }
-    img {
-      width: 36px;
-      height: 36px;
+    svg {
+      width: 56px;
       margin: 0 10px;
     }
   }
